2007-10-15  Herbert Xu <herbert@gondor.apana.org.au>

	* Replace shared illnum message by badnum function.

2007-10-17  Oleg Verych <olecom@flower.upol.cz>

	* Disallow completely blank strings in non-arithmetic context.

2007-10-15  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed execing of scripts with no hash-bang.

2007-10-11  Herbert Xu <herbert@gondor.apana.org.au>

	* Add assignment support in arithmetic expansions.
	* Size optimisations in arithmetic lexer.
	* Add likely flags in expari.
	* Use setvarint to set OPTIND.

2007-10-08  Herbert Xu <herbert@gondor.apana.org.au>

	* Report substition errors at expansion time.

2007-10-06  Herbert Xu <herbert@gondor.apana.org.au>

	* Add pushstackmark.
	* Treat OPTIND=0 in the same way as OPTIND=1.
	* Remove setvarsafe.
	* Use intmax_t arithmetic in test.

2007-10-05  Herbert Xu <herbert@gondor.apana.org.au>

	* Made grabstackblock an inline wrapper for stalloc.

2007-10-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix parsing of ${##1}.
	* Size optimisations in parameter expansion parser.

2007-10-04  Alexey Gladkov <legion@altlinux.org>

	* Add --enable-static option to configure.

2007-09-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Recognise here-doc delimiters terminated by EOF.

2007-09-26  Roy Marples <uberlord@gentoo.org>

	* Refresh stack pointers after makestrspace in _rmescapes.

2007-09-25  Gerrit Pape <pape@smarden.org>

	* Clarify description of -nt, -ot options to test builtin.
	* Clarify syntax of the for command.

2007-09-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Do not expand tilde in parameter expansion within quotes.
	* Move parse-time quote flag detection to run-time.

2007-09-24  Herbert Xu <herbert@gondor.apana.org.au>

	* Do not quote back slashes in parameter expansions outside quotes.
	* Perform tilde expansion in all parameter expansion words.
	* Remove superfluous arinest test in CENDQUOTE.
	* Remove superfluous arinest test for dqvarnest.